
syntax = "proto3";

message ChatMessage {
    string _id = 1;
    string from = 2;
    string to = 3;
    string type = 4;
    optional string text = 5;
    optional string src = 6;
    string date = 7;
}

message User {
    string _id = 1;
    string name = 2;
}

message Chat {
    string _id = 1;
    string name = 2;
    ChatMessage lastMessage = 3;
}

message Empty {}

message ChatList {
    repeated Chat chats = 1;
}

message CreateUserReq {
    string name = 1;
}

message UserReq {
    string userId = 1;
}

message ReceiveMsgRequest {
    string user = 1;
}

service ChatService {
    rpc createUser(CreateUserReq) returns (User) {}
    rpc getAllChats(UserReq) returns (ChatList) {}
}